# cmake_example

./: CMakeLists.txt  readme.md
func/: CMakeLists.txt  func.cpp  func.h
src/: CMakeLists.txt  main.cpp
